rpc: expose account parameter for several wallet RPCs
